results/SVCOMP/4-shot/log-exceptions3-2024_03_18_15_52_28.txt
class A extends Throwable {}

class B extends A {}

class C extends B {}

public class exceptions3 {
  //@ requires true;
  //@ ensures \result;
  public static void main(String[] args) {
    try {
      throw new B();
    } catch (C exc) {
      assert false;
    } catch (B exc) {
      assert false;
    }
  }
}
/home/max/Documents/JMLGPT/tmp/exceptions3.java:9: error: A \result expression may not be used in the specification of a method that returns void
  //@ ensures \result;
               ^
1 error

